--- a/content/weeknotes/2023-july.md
+++ b/content/weeknotes/2023-july.md
@@ -10,9 +10,8 @@ date: 2023-07
       summary = "🌕 Full moon sea dip",
       body = "An amazing way to start off the month of July. Took a friend who was new to sea dipping me me. They were nervous af but came out beaming. Very wholesome. Very full heart."
     ) }}
-
     {{ macro.details(
       summary = "🐘 Joined a Mastodon instance, finally",
-      body = "Go see! [cutie.city/@frills](https://cutie.city/@frills)"
+      body = "I'm still feeling it out. My introduction toot popped off, but my consequent toots fell into the void. I peaked too soon. If you're on the fediverse, come say hi! <a href='https://cutie.city/@frills' target='_blank'>cutie.city/@frills</a>. "
     ) }}
 </div>
