--- a/content/weeknotes/2023-july.md
+++ b/content/weeknotes/2023-july.md
@@ -12,6 +12,8 @@ date: 2023-07
     ) }}
     {{ macro.details(
       summary = "🐘 Joined a Mastodon instance, finally",
-      body = "I'm still feeling it out. My introduction toot popped off, but my consequent toots fell into the void. I peaked too soon. If you're on the fediverse, come say hi! <a href='https://cutie.city/@frills' target='_blank'>cutie.city/@frills</a>. "
+      body = "If you're on the fediverse, come toot hi! <a href='https://cutie.city/@frills' target='_blank'>cutie.city/@frills</a>. "
     ) }}
 </div>
+
+<!-- noone wants a townsquare with someone with a megaphone preaching about how jesus will save us. they want a cosy little coffee should on the outskirts of town to sink into an arm chair and chat with friends. -->
