--- a/content/weeknotes/2023-july.md
+++ b/content/weeknotes/2023-july.md
@@ -14,10 +14,17 @@ date: 2023-07
       summary = "🐘 Joined a Mastodon instance, finally",
       body = "If you're on the fediverse, come toot hi! <a href='https://cutie.city/@frills' target='_blank'>cutie.city/@frills</a>. "
     ) }}
+</div>
+
+## Week 2 July of 2023
+
+<div class="pb-2">
     {{ macro.details(
       summary = "🏠 More garage sorting",
       body = "Made 'uuuge progress on the garage. Got the door hook on (massive quality of life update omg), shelves up, drawers in place and all the DIY stuff is now in there, not super tidy, but in one accessible place!"
     ) }}
+    {{ macro.details(
+      summary = "🦷 Dentist liked my teeth",
+      body = "Been on the local dental waiting list for years, and finally got assigned a practice!! Won't have to drive 2 hours to get to have my teeth poked ever again. yaaay"
+    ) }}
 </div>
-
-<!-- noone wants a townsquare with someone with a megaphone preaching about how jesus will save us. they want a cosy little coffee should on the outskirts of town to sink into an arm chair and chat with friends. -->
