📝 Merge weeknotes into blog list

--- a/content/blog/2023-july.md
+++ b/content/blog/2023-july.md
@@ -1,6 +1,8 @@
 ---
 title: Weeknotes for July 2023
 date: 2023-07
+tags:
+  - weeknotes
 ---
 {% import "_includes/_components/components.njk" as macro with context %}
 ## Week 1 July of 2023
