--- a/content/blog/2023-june.md
+++ b/content/blog/2023-june.md
@@ -1,6 +1,8 @@
 ---
 title: Weeknotes for June 2023
 date: 2023-06
+tags:
+  - weeknotes
 ---
 {% import "_includes/_components/components.njk" as macro with context %}
 ## Week 1 June of 2023
