--- a/content/blog/2023-july.md
+++ b/content/blog/2023-july.md
@@ -5,9 +5,7 @@ tags:
   - weeknotes
 ---
 {% import "_includes/_components/components.njk" as macro with context %}
-## Week 1 July of 2023
-
-<div class="pb-2">
+<div class="pb-1">
     {{ macro.details(
       summary = "🌕 Full moon sea dip",
       body = "An amazing way to start off the month of July. Took a friend who was new to sea dipping me me. They were nervous af but came out beaming. Very wholesome. Very full heart."
@@ -16,11 +14,6 @@ tags:
       summary = "🐘 Joined a Mastodon instance, finally",
       body = "If you're on the fediverse, come toot hi! <a href='https://cutie.city/@frills' target='_blank'>cutie.city/@frills</a>. "
     ) }}
-</div>
-
-## Week 2 July of 2023
-
-<div class="pb-2">
     {{ macro.details(
       summary = "🏠 More garage sorting",
       body = "Made 'uuuge progress on the garage. Got the door hook on (massive quality of life update omg), shelves up, drawers in place and all the DIY stuff is now in there, not super tidy, but in one accessible place!"
@@ -29,4 +22,16 @@ tags:
       summary = "🦷 Dentist liked my teeth",
       body = "Been on the local dental waiting list for years, and finally got assigned a practice!! Won't have to drive 2 hours to get to have my teeth poked ever again. yaaay"
     ) }}
+    {{ macro.details(
+      summary = "🏃‍♀️ Started running",
+      body = "Started (and stopped, due to joint pain) the NHS couch to 5k. Sarah Millican cooing northern motherly vibes into my ears as I jog in the rain is incredibly soothing."
+    ) }}
+    {{ macro.details(
+      summary = "🟩 Joined a new Minecraft server with pals",
+      body = "Built an iron farm instantly, using aJack's aesthetic tutorial. IT'S SO CUTE."
+    ) }}
 </div>
+
+Spent time with friends and family this month, saw lots of friends - some that I hadn't seen in at least 12 months!
+
+Done a few tweaks to the site, added a button wall and made my own button. Really need to write my manifesto so that I can align myself with it, mostly around my rules for using images (trying to avoid images entirely because of their file size). Already considering a redesign, but need way more content here first.
