--- a/content/blog/2023-july.md
+++ b/content/blog/2023-july.md
@@ -4,32 +4,32 @@ date: 2023-07
 tags:
   - weeknotes
 ---
-{% import "_includes/_components/components.njk" as macro with context %}
+{% import "structure/components/components.njk" as macro with context %}
 <div class="pb-1">
-    {{ macro.details(
-      summary = "🌕 Full moon sea dip",
-      body = "An amazing way to start off the month of July. Took a friend who was new to sea dipping me me. They were nervous af but came out beaming. Very wholesome. Very full heart."
-    ) }}
-    {{ macro.details(
-      summary = "🐘 Joined a Mastodon instance, finally",
-      body = "If you're on the fediverse, come toot hi! <a href='https://cutie.city/@frills' target='_blank'>cutie.city/@frills</a>. "
-    ) }}
-    {{ macro.details(
-      summary = "🏠 More garage sorting",
-      body = "Made 'uuuge progress on the garage. Got the door hook on (massive quality of life update omg), shelves up, drawers in place and all the DIY stuff is now in there, not super tidy, but in one accessible place!"
-    ) }}
-    {{ macro.details(
-      summary = "🦷 Dentist liked my teeth",
-      body = "Been on the local dental waiting list for years, and finally got assigned a practice!! Won't have to drive 2 hours to get to have my teeth poked ever again. yaaay"
-    ) }}
-    {{ macro.details(
-      summary = "🏃‍♀️ Started running",
-      body = "Started (and stopped, due to joint pain) the NHS couch to 5k. Sarah Millican cooing northern motherly vibes into my ears as I jog in the rain is incredibly soothing."
-    ) }}
-    {{ macro.details(
-      summary = "🟩 Joined a new Minecraft server with pals",
-      body = "Built an iron farm instantly, using aJack's aesthetic tutorial. IT'S SO CUTE."
-    ) }}
+    <details>
+      <summary>🌕 Full moon sea dip</summary>
+      <div>An amazing way to start off the month of July. Took a friend who was new to sea dipping me me. They were nervous af but came out beaming. Very wholesome. Very full heart.</div>
+    </details>
+    <details>
+      <summary>🐘 Joined a Mastodon instance, finally</summary>
+      <div>If you're on the fediverse, come toot hi! <a href='https://cutie.city/@frills' target='_blank'>cutie.city/@frills</a>. </div>
+    </details>
+    <details>
+      <summary>🏠 More garage sorting</summary>
+      <div>Made 'uuuge progress on the garage. Got the door hook on (massive quality of life update omg), shelves up, drawers in place and all the DIY stuff is now in there, not super tidy, but in one accessible place!</div>
+    </details>
+    <details>
+      <summary>🦷 Dentist liked my teeth</summary>
+      <div>Been on the local dental waiting list for years, and finally got assigned a practice!! Won't have to drive 2 hours to get to have my teeth poked ever again. yaaay</div>
+    </details>
+    <details>
+      <summary>🏃‍♀️ Started running</summary>
+      <div>Started (and stopped, due to joint pain) the NHS couch to 5k. Sarah Millican cooing northern motherly vibes into my ears as I jog in the rain is incredibly soothing.</div>
+    </details>
+    <details>
+      <summary>🟩 Joined a new Minecraft server with pals</summary>
+      <div>Built an iron farm instantly, using aJack's aesthetic tutorial. IT'S SO CUTE.</div>
+    </details>
 </div>
 
 Spent time with friends and family this month, saw lots of friends - some that I hadn't seen in at least 12 months!
