--- a/content/blog/2023-june.md
+++ b/content/blog/2023-june.md
@@ -4,111 +4,64 @@ date: 2023-06
 tags:
   - weeknotes
 ---
-{% import "structure/components/components.njk" as macro with context %}
-## Week 1 June of 2023
+## 🚣 Kayak training with the dog.
+It was in the shallows but the water was rapid so I was nervous we were going to float away! The dog did amazing though, I thought she would be spooked because she is terrible in the car, and this is also a vehicle that moves, but she was excited and handled the kayak moving really well. Lots of treats were had. Next time we'll go on deeper but calmer waters.
 
-First week of weeknotes, and it includes my birthday! Happy gemini season.
+## 🎨️ Finished painting the garden fence.
+Just the gate fence to go now. The weather has really been in my favour and I need to hurry up to finish it because the rain will surely come back soon!
 
-<div class="pb-2">
-    <details>
-      <summary>🚣 Kayak training with the dog.</summary>
-      <div>It was in the shallows but the water was rapid so I was nervous we were going to float away! The dog did amazing though, I thought she would be spooked because she is terrible in the car, and this is also a vehicle that moves, but she was excited and handled the kayak moving really well. Lots of treats were had. Next time we'll go on deeper but calmer waters.</div>
-    </details>
-    <details>
-      <summary>🎨️ Finished painting the garden fence.</summary>
-      <div>Just the gate fence to go now. The weather has really been in my favour and I need to hurry up to finish it because the rain will surely come back soon!</div>
-    </details>
-    <details>
-      <summary>👩‍💻 Giving eleventy a go.</summary>
-      <div> I have a github repo where it is very much the basic fork but it's progress. I've dabbled with Hugo in the past but the language and structure of 11ty (nunjucks) seems to make sense to me.</div>
-    </details>
-    <details>
-      <summary>🌕 Moon sea dip.</summary>
-      <div>I haven't sea dipped for about 8 months, since before the clocks went back for winter. Completely forgot about the happy chemicals it makes. I was buzzing after and slept very very well.</div>
-    </details>
-    <details>
-      <summary>✅ Completed a follow up survey with the ONS.</summary>
-      <div>Our answers had mostly not changed from March. But I found it really tough as someone with auditory processing difficulties, the bad phone line and the lady with the strong Spanish accent made my brain go ouch.</div>
-    </details>
-    <details>
-      <summary>🕸️ Watched Spider-Man: Across the Spider-Verse in the cinema.</summary>
-      <div>Adore the art styles. Big old set up for Spider-Verse 3. Threw a lot of popcorn at my face. 10/10.</div>
-    </details>
-    <details>
-      <summary>🌊️ Sunrise sea dip.</summary>
-      <div>Got up at 4am to dip in the sea for sunrise. Sea was so far out I nearly lost my crocs in the mud a few times on the wade in. The north easterly wind is brutal, and I ended up getting chill from being exposed for too long, had to wrap up in my oodie and a scarf for a few hours.</div>
-    </details>
-    <details>
-      <summary>⛈️ Paddled in a waterfall pool in the shadow of a thunderstorm.</summary>
-      <div>Atmospheric, hot, a little bit scary, wholesome. The dog finally learnt to swim as well!</div>
-    </details>
-</div>
+## 👩‍💻 Giving eleventy a go.
+ I have a github repo where it is very much the basic fork but it's progress. I've dabbled with Hugo in the past but the language and structure of 11ty (nunjucks) seems to make sense to me.
 
-## Week 2 June of 2023
+## 🌕 Moon sea dip.
+I haven't sea dipped for about 8 months, since before the clocks went back for winter. Completely forgot about the happy chemicals it makes. I was buzzing after and slept very very well.
 
-The last full week of long days, the summer solstice will be here soon to mark our slow descent back into darkness.
+## ✅ Completed a follow up survey with the ONS.
+Our answers had mostly not changed from March. But I found it really tough as someone with auditory processing difficulties, the bad phone line and the lady with the strong Spanish accent made my brain go ouch.
 
-<div class="pb-2">
-    <details>
-      <summary>🌲 Forest-bathing for research</summary>
-      <div>I was lucky enough to be invited to join university fellows in research about forest-bathing and it's effects on people with a focus on leadership roles.</div>
-    </details>
-    <details>
-      <summary>🏠 Clearing some furniture from the garage</summary>
-      <div>I <strong>will</strong> reclaim the garage from all the clutter!</div>
-    </details>
-    <details>
-      <summary>🐕 Dog sat for a poor old boy</summary>
-      <div>Minded Murphy (mother-in-law's dog) after he had been in the vets for 2 days, he was so so so sleepy.</div>
-    </details>
-    <details>
-      <summary>👨‍👧 Celebrated Father's day with my dad</summary>
-      <div>Forever grateful for having him as my dad. We went to a carboot, ate nice food and had a paddle in the river!</div>
-    </details>
-</div>
+## 🕸️ Watched Spider-Man: Across the Spider-Verse in the cinema.
+Adore the art styles. Big old set up for Spider-Verse 3. Threw a lot of popcorn at my face. 10/10.
 
-## Week 3 June of 2023
+## 🌊️ Sunrise sea dip.
+Got up at 4am to dip in the sea for sunrise. Sea was so far out I nearly lost my crocs in the mud a few times on the wade in. The north easterly wind is brutal, and I ended up getting chill from being exposed for too long, had to wrap up in my oodie and a scarf for a few hours.
 
-Summer solstice is here!
+## ⛈️ Paddled in a waterfall pool in the shadow of a thunderstorm.
+Atmospheric, hot, a little bit scary, wholesome. The dog finally learnt to swim as well!
 
-<div class="pb-2">
-    <details>
-      <summary>🚣 Getting interested in Commonplacing</summary>
-      <div>Making unthemed notes, lists, quotes, doodles. Some people notebook that way automatically, but I'm too precious. I want commonplacing to help me use analog processes more</div>
-    </details>
-    <details>
-      <summary>🎨️ Work social!</summary>
-      <div>Spending some IRL time with my remote colleagues, smashing some 9 year olds in laser quest lol</div>
-    </details>
-    <details>
-      <summary>👩‍💻 Enjoying the summer solstice.</summary>
-      <div>Didn't do anything special, but had a nice walk and was mindful of the turning of tides. Trying to be positive about the descent into darkness.</div>
-    </details>
-    <details>
-      <summary>📚 Want to start reading again.</summary>
-      <div>Still remember the absolute joy of reading <a href='https://www.goodreads.com/en/book/show/40275288' target='_blank'>The Priory of the Orange Tree</a> and everything gets compared to that. I have been chatting to friends about the <a href='https://www.amazon.co.uk/Wheel-Time-Season-1/dp/B09F59DZ2Z' target='_blank'>Wheel of Time TV series</a>, and the books are supposed to be excellent, all 14 of them.</div>
-    </details>
-</div>
+## 🌲 Forest-bathing for research
+I was lucky enough to be invited to join university fellows in research about forest-bathing and it's effects on people with a focus on leadership roles.
 
-## Week 4 June of 2023
+## 🏠 Clearing some furniture from the garage
+I <strong>will</strong> reclaim the garage from all the clutter!
 
-And just like that, June is over.
+## 🐕 Dog sat for a poor old boy
+Minded Murphy (mother-in-law's dog) after he had been in the vets for 2 days, he was so so so sleepy.
 
-<div class="pb-2">
-    <details>
-      <summary>🕺 Fiancé is away for work</summary>
-      <div>So I've been doing a tonne of washing.</div>
-    </details>
-    <details>
-      <summary>💞 Date night with the bestie</summary>
-      <div>It's been ages!</div>
-    </details>
-    <details>
-      <summary>👨‍👩‍👧 Mum and dad popped over for the evening</summary>
-      <div>I live 1.5h away from them in the car, so having them pop over for the evening is special. It was lovely to have their company, they took the dog for a walk before I finished work and we ate good food and chatted. They also brought me some poppy seeds!</div>
-    </details>
-    <details>
-      <summary>🎨 Finished that half-painted wall in the utility room</summary>
-      <div>I started painting the wall before we put up our clothes airers, because I didn't want to take them down againt to paint behind them. Fast-forward a year and it's still half painted. I just so happened to have the energy and motivation to finally finish that wall.. and maybe start another!?</div>
-    </details>
-</div>
+## 👨‍👧 Celebrated Father's day with my dad
+Forever grateful for having him as my dad. We went to a carboot, ate nice food and had a paddle in the river!
+
+## 🚣 Getting interested in Commonplacing
+Making unthemed notes, lists, quotes, doodles. Some people notebook that way automatically, but I'm too precious. I want commonplacing to help me use analog processes more
+
+## 🎨️ Work social!
+Spending some IRL time with my remote colleagues, smashing some 9 year olds in laser quest lol
+
+## 👩‍💻 Enjoying the summer solstice.
+Didn't do anything special, but had a nice walk and was mindful of the turning of tides. Trying to be positive about the descent into darkness.
+
+## 📚 Want to start reading again.
+Still remember the absolute joy of reading <a href='https://www.goodreads.com/en/book/show/40275288' target='_blank'>The Priory of the Orange Tree</a> and everything gets compared to that. I have been chatting to friends about the <a href='https://www.amazon.co.uk/Wheel-Time-Season-1/dp/B09F59DZ2Z' target='_blank'>Wheel of Time TV series</a>, and the books are supposed to be excellent, all 14 of them.
+
+## 🕺 Fiancé is away for work
+So I've been doing a tonne of washing.
+
+## 💞 Date night with the bestie
+It's been ages!
+
+## 👨‍👩‍👧 Mum and dad popped over for the evening
+I live 1.5h away from them in the car, so having them pop over for the evening is special. It was lovely to have their company, they took the dog for a walk before I finished work and we ate good food and chatted. They also brought me some poppy seeds!
+
+## 🎨 Finished that half-painted wall in the utility room
+I started painting the wall before we put up our clothes airers, because I didn't want to take them down againt to paint behind them. Fast-forward a year and it's still half painted. I just so happened to have the energy and motivation to finally finish that wall.. and maybe start another!?
+
+
