🟧 Add all RSS feed

--- a/content/blog/2023-july.md
+++ b/content/blog/2023-july.md
@@ -3,6 +3,7 @@ title: Weeknotes for July 2023
 date: 2023-07
 tags:
   - weeknotes
+rss: true
 ---
 ## 🌕 Full moon sea dip
 An amazing way to start off the month of July. Took a friend who was new to sea dipping me me. They were nervous af but came out beaming. Very wholesome. Very full heart.
