--- a/content/blog/2023-june.md
+++ b/content/blog/2023-june.md
@@ -3,6 +3,7 @@ title: Weeknotes for June 2023
 date: 2023-06
 tags:
   - weeknotes
+rss: true
 ---
 ## 🚣 Kayak training with the dog.
 It was in the shallows but the water was rapid so I was nervous we were going to float away! The dog did amazing though, I thought she would be spooked because she is terrible in the car, and this is also a vehicle that moves, but she was excited and handled the kayak moving really well. Lots of treats were had. Next time we'll go on deeper but calmer waters.
