--- a/content/changelog/231005.md
+++ b/content/changelog/231005.md
@@ -1,5 +1,6 @@
 ---
 date: 2023-10-05
+rss: true
 ---
 - Updated [Accessibility declaration](https://fri11s.neocities.org/accessibility/):
   - Updated WCAG version from 2.1 to 2.2
