--- a/content/changelog/231019.md
+++ b/content/changelog/231019.md
@@ -1,5 +1,6 @@
 ---
 date: 2023-10-19
+rss: true
 ---
 
 - Added a <a href="https://fri11s.neocities.org/shrine/orla/">Shrine for Orla</a>. Gutted I couldn't embed an mp3 of her dream woofs as Neocities doesn't support it.
