--- a/content/changelog/231026.md
+++ b/content/changelog/231026.md
@@ -1,5 +1,6 @@
 ---
 date: 2023-10-26
+rss: true
 ---
 
 - Added Orla's dream woofs mp3 and a video to her <a href="https://fri11s.neocities.org/shrine/orla/">Shrine</a>. Neocities supporter means I can upload any file type 😈
