--- a/content/changelog/231117.md
+++ b/content/changelog/231117.md
@@ -4,5 +4,5 @@ rss: true
 ---
 
 - Added randomised avatars to the homepage
-- Added an <a href="https://frills.dev/collections/avatars">avatar collection</a>.
-- Added an <a href="https://frills.dev/collections/sticker-album">sticker collection</a>.
+- Added an <a href="https://frills.dev/collections/avatars">avatar collection</a>
+- Added a <a href="https://frills.dev/collections/sticker-album">sticker collection</a>
