🎨  Add fun time stuff for homepage

--- a/content/changelog/231102.md
+++ b/content/changelog/231102.md
@@ -3,6 +3,6 @@ date: 2023-11-02
 rss: true
 ---
 
-- Added explanation of JavaScript usage to <a href="/site">About the site</a>
+- Added explanation of JavaScript usage to <a href="/colophon">Colophon</a>
 - Added 2 new webrings to the homepage: <a href="https://ladiesofthe.link/">Ladies of the Links</a> and <a href="https://genlissa.neocities.org/">Gen Lissa</a>
 - Removed Halloween theme toggle
