🏗️ Move weeknotes heading modifer to blog post

--- a/content/blog/2023-july.md
+++ b/content/blog/2023-july.md
@@ -5,6 +5,8 @@ tags:
   - weeknotes
 rss: true
 ---
+<div class="h-sm">
+
 ## 🌕 Full moon sea dip
 An amazing way to start off the month of July. Took a friend who was new to sea dipping me me. They were nervous af but came out beaming. Very wholesome. Very full heart.
 
@@ -29,3 +31,5 @@ Spent time with friends and family this month, saw lots of friends - some that I
 
 ## 👩🏼‍💻 Worked on the website
 Done a few tweaks to the site, added a button wall and made my own button. Really need to write my manifesto so that I can align myself with it, mostly around my rules for using images (trying to avoid images entirely because of their file size). Already considering a redesign, but need way more content here first.
+
+</div>
