--- a/content/blog/2023-june.md
+++ b/content/blog/2023-june.md
@@ -5,6 +5,9 @@ tags:
   - weeknotes
 rss: true
 ---
+
+<div class="h-sm">
+
 ## 🚣 Kayak training with the dog.
 It was in the shallows but the water was rapid so I was nervous we were going to float away! The dog did amazing though, I thought she would be spooked because she is terrible in the car, and this is also a vehicle that moves, but she was excited and handled the kayak moving really well. Lots of treats were had. Next time we'll go on deeper but calmer waters.
 
@@ -65,4 +68,4 @@ I live 1.5h away from them in the car, so having them pop over for the evening i
 ## 🎨 Finished that half-painted wall in the utility room
 I started painting the wall before we put up our clothes airers, because I didn't want to take them down againt to paint behind them. Fast-forward a year and it's still half painted. I just so happened to have the energy and motivation to finally finish that wall.. and maybe start another!?
 
-
+</div>
