📝 Update blog post

--- a/content/blog/240614-gemini.md
+++ b/content/blog/240614-gemini.md
@@ -10,7 +10,7 @@ kudos: ♊
 
 Born into, not chose.<br/>
 Sun, moon, planets a-rising.<br/>
-magical star charts.
+Magical star charts.
 
 Twins, 'two-faced', deceit.<br/>
 Conflicted, quick-witted—<br/>
