📝 Update blog post

--- a/content/blog/240614-gemini.md
+++ b/content/blog/240614-gemini.md
@@ -13,5 +13,5 @@ Sun, moon, planets a-rising.<br/>
 Magical star charts.
 
 Twins, 'two-faced', deceit.<br/>
-Conflicted, quick-witted—<br/>
+Conflicted and quick-witted—<br/>
 Just a Gemini.<br/>
