📝 Update blog post

--- a/content/blog/240614-gemini.md
+++ b/content/blog/240614-gemini.md
@@ -4,14 +4,17 @@ description: A haiku
 date: 2024-06-14 18:00:00
 tags:
 - personal
+- poem
 rss: true
 kudos: ♊
 ---
+<div class="prose">
+    <p>Born into, not chose.<br>
+    Sun, moon, planets a-rising.<br>
+    Magical star charts.</p>
 
-Born into, not chose.<br/>
-Sun, moon, planets a-rising.<br/>
-Magical star charts.
-
-Twins, 'two-faced', deceit.<br/>
-Conflicted and quick-witted—<br/>
-Just a Gemini.<br/>
+    <p>Twins, 'two-faced', deceit.<br>
+    Conflicted and quick-witted—<br>
+    Just a Gemini.
+    </p>
+</div>
