🪐 Change Collections to Curios

--- a/content/changelog/231026.md
+++ b/content/changelog/231026.md
@@ -3,5 +3,5 @@ date: 2023-10-26
 rss: true
 ---
 
-- Added Orla's dream woofs mp3 and a video to her <a href="https://fri11s.neocities.org/collections/orla/">Shrine</a>. Neocities supporter means I can upload any file type 😈
+- Added Orla's dream woofs mp3 and a video to her <a href="https://fri11s.neocities.org/curios/orla/">Shrine</a>. Neocities supporter means I can upload any file type 😈
 - Added latest posts and Neocities profile link to homepage
