--- a/content/changelog/250402.md
+++ b/content/changelog/250402.md
@@ -3,7 +3,7 @@ date: 2025-04-02
 rss: true
 ---
 
-- ✨Added [Collections](https://frills.dev/collections/)
+- ✨Added [Curios](https://frills.dev/curios/)
 - 🔥 Removed [Art](https://frills.dev/art/) from main navigation
 - ✨ Added [Site Map](https://frills.dev/sitemap/)
-- 📦 Moved [Orla shrine](https://frills.dev/collections/orla/) to Collections 
+- 📦 Moved [Orla shrine](https://frills.dev/curios/orla/) to Curios 
